--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,9 @@ button {
 }
 .navigation__rightSide {
 	display: flex;
-	margin-left: auto;
 	gap: 16px;
+	margin-left: auto;
+	align-items: center;
 }
 
 .navButton {
@@ -97,13 +98,16 @@ button {
 /* Main */
 .info {
 	background-color: #F8F8F8;
-	padding-top: 19px;
-	padding-bottom: 100%;
+	width: 100%;
+	height: 100%;
+
+	border-top: 1px solid #D9FFF5;
 }
 .info__header {
 	display: flex;
-	margin-bottom: 24px;
 	align-items: center;
+	margin-bottom: 24px;
+	margin-top: 19px;
 }
 .info__header::before {
 	content: '';
@@ -141,7 +145,7 @@ button {
 
 .info__scrollMenu {
 	display: flex;
-	overflow: scroll;
+	overflow-x: scroll;
 	margin-bottom: 24px;
 }
 
